# regex_runner

./: CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml
examples/: example_algorithm.py  example_config.py
src/regex_runner/: main.py
src/regex_runner/algo/: pattern.py
src/regex_runner/io/: corpus.py  out.py  report.py
src/runrex/: __init__.py  main.py  schema.py
src/runrex/algo/: pattern.py  result.py
src/runrex/cli/: create_variable.py
src/runrex/io/: corpus.py  formatter.py  out.py
src/runrex/text/: document.py  section.py  sections.py  sentence.py  sentences.py  ssplit.py
src/scripts/: extract_and_load_json.py
tests/: test_pattern.py  test_sentence.py  test_sentences.py
