[build-system]
requires = ['flit_core >=3.2']
build-backend = 'flit_core.buildapi'

[project]
name = 'runrex'
version = '0.3.5'
module = 'runrex'
authors = [
    { name = 'dcronkite', email = 'dcronkite+pypi@gmail.com' }
]
home-page = 'https://github.com/dcronkite/runrex'
requires = ['jsonschema', 'sqlalchemy', 'loguru', 'syntok']
requires-python = '>=3.8'
readme = 'README.md'
keywords = ['nlp', 'information extraction']
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Text Processing :: Linguistic',
    'License :: OSI Approved :: MIT License',
]

[project.optional-dependencies]
db = ['pyodbc']
dev = ['pytest']
psql = ['psycopg2']
sas = ['sas7bdat']
tok = ['syntok']
pandas = ['pandas']
